--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,13 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+
+#################
+## JetBrains IDEA
+#################
+.idea/
+
+##################
+## The virtual env
+##################
+survey
