--- a/static/survey.yaml
+++ b/static/survey.yaml
@@ -4,7 +4,7 @@ pages:
     question_groups:
     - questions:
       - answer:
-          action: populateDriversTable(<driver-count.value>)
+          action: displayDriversTable(<driver-count.value>)
           options:
           - 1
           - 2
@@ -16,10 +16,39 @@ pages:
         text: How many drivers in your household?
     - hidden: true
       questions:
-      - answer:
+      - text: How much do you expect each driver to use the car?
+        answer:
           tag: drivers-table
-          type: custom
-        text: How much do you expect each driver to use the car?
+          type: table
+          row_count: 10
+          row:
+          - text: '"Driver " + `(%d+1)` ' # this complex expression assigns a 1-based index to each driver
+            answer:
+              type: input
+          - text: Sex
+            answer:
+              type: select
+              options:
+              - ' '
+              - Male
+              - Female
+          - text: Vehicle Use
+            answer:
+              type: select
+              options:
+              - ' '
+              - 0%
+              - 10%
+              - 20%
+              - 30%
+              - 40%
+              - 50%
+              - 60%
+              - 70%
+              - 80%
+              - 90%
+              - 100%
+
     - hidden: true
       questions:
       - answer:
