--- a/static/survey.yaml
+++ b/static/survey.yaml
@@ -5,12 +5,7 @@ pages:
     - questions:
       - answer:
           action: displayDriversTable(<driver-count.value>)
-          options:
-          - 1
-          - 2
-          - 3
-          - 4
-          - 5
+          options: [' ', 1, 2, 3, 4, 5, 6, 7 ,8 ,9]
           tag: driver-count
           type: select
         text: How many drivers in your household?
@@ -20,45 +15,28 @@ pages:
         answer:
           tag: drivers-table
           type: table
-          row_count: 10
+          row_count: 9
           row:
-          - text: '"Driver " + `(%d+1)` ' # this complex expression assigns a 1-based index to each driver
+          - text: '"Driver " + `%d+1` + " Age: "' # assign a 1-based index to each driver
             answer:
               type: input
-          - text: Sex
+          - text: 'Sex:'
             answer:
               type: select
               options:
               - ' '
               - Male
               - Female
-          - text: Vehicle Use
+          - text: 'Vehicle Use:'
             answer:
               type: select
-              options:
-              - ' '
-              - 0%
-              - 10%
-              - 20%
-              - 30%
-              - 40%
-              - 50%
-              - 60%
-              - 70%
-              - 80%
-              - 90%
-              - 100%
+              options: [' ', 0%, 10%, 20%, 30%, 40%, 50%, 60%, 70%, 80%, 90%, 100%]
 
     - hidden: true
       questions:
       - answer:
           action: showQuestions([1, 2])
-          options:
-          - '1'
-          - '2'
-          - '3'
-          - '4'
-          - 5 or more
+          options: [' ', 1, 2, 3, 4, 5 or more]
           type: select
         text:
         - Other than your vehicle, how many vehicles does your household own or lease
@@ -68,12 +46,7 @@ pages:
         - for a day to day travel. Please do not include motorcycles, recreational
           vehicles, or motor homes.)
       - answer:
-          options:
-          - '1'
-          - '2'
-          - '3'
-          - '4'
-          - 5 or more
+          options: [' ', 1, 2, 3, 4, 5 or more]
           type: select
         text: Of these vehicles, how many did your household buy or lease new in the
           last 5 years (model year 2007 or later)?
