--- a/static/survey.yaml
+++ b/static/survey.yaml
@@ -4,17 +4,18 @@ pages:
     question_groups:
     - questions:
       - answer:
-          action: displayDriversTable(<driver-count.value>)
+          action: displayDriversTable(<driver_count.value>)
           options: [' ', 1, 2, 3, 4, 5, 6, 7 ,8 ,9]
-          tag: driver-count
+          tag: driver_count
           type: select
         text: How many drivers in your household?
     - hidden: true
       questions:
       - text: How much do you expect each driver to use the car?
         answer:
-          tag: drivers-table
+          tag: driver_table
           type: table
+          hidden: true
           row_count: 9
           row:
           - text: '"Driver " + `%d+1` + " Age: "' # assign a 1-based index to each driver
